--- a/cars/index.html
+++ b/cars/index.html
@@ -119,6 +119,6 @@
       </figure>
     </main>
     <script src="vue.min.js"></script>
-    <script src="cars.js"></script>
+    <script src="cars.v2.js"></script>
   </body>
 </html>
